<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/capture" >

    <EditText
        android:id="@+id/EnterDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/EnterClaimName"
        android:layout_below="@+id/EnterClaimName"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/Enter_Description"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/EnterStartDate"
        android:layout_width="0dp"
        android:focusableInTouchMode="false"
        android:layout_weight=".5"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/EnterClaimName"
        android:layout_below="@+id/EnterDescription"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/Enter_Start_Date"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/EnterEndDate"
        android:layout_width="0dp"
        android:layout_weight=".5"
        android:focusableInTouchMode="false"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/EnterStartDate"
        android:layout_below="@+id/EnterStartDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/Enter_End_Date"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/editEnterStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EnterEndDate"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#000"
        android:hint="@string/Enter_Status" />

    <Button
        android:id="@+id/buttonsaveClaim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editEnterStatus"
        android:layout_marginTop="44dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/textNewCLaimHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:hint="@string/New_Claim"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/EnterClaimName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textNewCLaimHeader"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Enter_Claim_Name"
        android:textColorHint="#000" >

        <requestFocus />
    </EditText>

</RelativeLayout>
